# socialpy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.toml  test.sh
app/: app.py
app/core/: config.py
app/database/: db.py  models.py
migrations/: env.py  script.py.mako
migrations/versions/: 58ee19b221c1_post.py  751cf7e7e63f_social.py  deb5115f4e26_initial.py
socialpy/: app.py  auth.py  cli.py  config.py  db.py  security.py
socialpy/api/v1/: __init__.py
socialpy/api/v1/endpoints/: auth.py  post.py  user.py
socialpy/db/: db.py
socialpy/db/models/: post.py  user.py
socialpy/db/schemas/: post.py  user.py
socialpy/models/: __init__.py  post.py  user.py
socialpy/routes/: __init__.py  auth.py  post.py  user.py
socialpy/utils/: auth.py  cli.py  security.py
tests/: conftest.py  test_api.py  test_db.py
