[tool.poetry]
name = "socialpy"
version = "0.1.0"
description = "Rede social baseada no twitter"
authors = ["mateus-dev-me <mateusmartinsipu2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
typer = "^0.7.0"
dynaconf = "^3.1.11"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.2"
rich = "^13.3.1"
ipython = "^8.9.0"
pylint = "^2.16.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
sdb = "^1.8"
pytest = "^7.2.1"
pytest-order = "^1.0.1"
httpx = "^0.23.3"
isort = "^5.12.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
